finishing tag and images requesg
