# api/index.ts
@@ -9,6 +9,7 @@ import cors from "cors";
 import blogRouter from "./routes/blog.routes";
 import categoryRouter from "./routes/category.routes";
 import tagRouter from "./routes/tag.routes";
+import imageRouter from "./routes/image.routes";
 
 const app = express();
 app.use(
@@ -51,6 +52,7 @@ app.get("/api/openapi.yaml", (_req: Request, res: Response) => {
 app.use("/api/blogs", blogRouter);
 app.use("/api/categories", categoryRouter);
 app.use("/api/tags", tagRouter);
+app.use("/api/images", imageRouter);
 
 app.get("/api/docs", (_req: Request, res: Response) => {
   const specUrl = "/api";
